--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.101.0
 uvicorn==0.23.0
 sqlalchemy==1.4.48
+asyncpg==0.25.0        # For asynchronous PostgreSQL support
+psycopg2==2.9.3        # For synchronous PostgreSQL support
 pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
@@ -8,3 +10,6 @@ pillow==9.4.0
 web3==6.6.0
 aiofiles==0.8.0
 python-dotenv==1.0.0
+requests==2.28.1
+eth-account==0.5.6
+eth-utils==2.0.0
