--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ web3==3.16.1
 aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.1
-eth-utils>=2.1.0
+eth-utils==2.1.1
+ethereum-tester==0.1.0b3
 ens==0.6.1
 gunicorn==20.1.0
