--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.1
 eth-utils==2.1.1
-ethereum-tester==0.1.0b3
+ethereum-tester==0.1.0-beta.1
 ens==0.6.1
 gunicorn==20.1.0
