--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ web3==3.16.1
 aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.1
-eth-utils==1.10.0
-cytoolz>=0.10.1,<1.0.0  # Allowing for 0.10.1 or any version < 1.0.0
+# eth-utils==1.10.0
+cytoolz>=0.8.2  # Allowing for 0.10.1 or any version < 1.0.0
 # Remove or comment out ethereum-tester if you don't need it right now
 # ethereum-tester==0.1.0b1
 ens==0.6.1
