--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,10 @@ pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
 pillow==9.4.0
-web3==3.16.1
+web3==6.6.0
 aiofiles==0.8.0
 python-dotenv==1.0.0
-requests==2.28.1
-# eth-utils==1.10.0
-cytoolz>=0.8.2  # Allowing for 0.10.1 or any version < 1.0.0
-# Remove or comment out ethereum-tester if you don't need it right now
-# ethereum-tester==0.1.0b1
+requests==2.28.0
+eth-utils>=2.0.0
 ens==0.6.1
 gunicorn==20.1.0
