--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
 pillow==9.4.0
-web3==3.16.1  # Downgraded to be compatible with ens
+web3==3.16.1  # Downgraded to ensure compatibility
 aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.0
-eth-utils>=2.0.0
+eth-utils==1.10.0  # Downgraded to avoid conflicts
+cytoolz==0.8.2  # Set explicitly to match ethereum-tester
+# Remove or comment out ethereum-tester if not needed
+# ethereum-tester==0.1.0b1
 ens==0.6.1
 gunicorn==20.1.0
