--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,15 @@ pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
 pillow==9.4.0
-web3==6.6.0  # Updated to the latest version
+ens==0.6.1
+eth-abi==0.5.0
+eth-keys==0.1.0b4
+eth-tester==0.1.0b11
+eth-utils==0.7.4
+pysha3==1.0.2
+rlp==0.6.0
+web3==3.16.5
 aiofiles==0.8.0
 python-dotenv==1.0.0
-requests==2.28.0
-eth-utils==2.1.0  # Use a version compatible with web3
-cytoolz>=0.10.1  # Allow a range of versions, including the one required by eth-utils
-# Remove or comment out ethereum-tester if not needed
-# ethereum-tester==0.1.0b1
-ens==0.6.1
+requests==2.28.1
 gunicorn==20.1.0
