--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,9 @@ pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
 pillow==9.4.0
-ens>=0.6.1
-eth-abi==0.5.0
-eth-keys==0.1.0b4
-eth-tester==0.1.0b11
-eth-utils==0.7.4
-pysha3==1.0.2
-rlp==0.6.0
 web3==3.16.5
 aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.1
+eth-utils>=2.1.0
 gunicorn==20.1.0
-git+https://github.com/ethanfurman/PySHA3.git@main#egg=pysha3
