--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydantic==1.10.9
 fastapi-jwt-auth==0.4.0
 python-multipart==0.0.6
 pillow==9.4.0
-web3==3.16.5
+web3
 aiofiles==0.8.0
 python-dotenv==1.0.0
 requests==2.28.1
